# TestAssigment

./: README.md  pyproject.toml
testassigment/: main.py
testassigment/data/: __init__.py
testassigment/services/: __init__.py  classes.py  reader.py
tests/test_services/: __init__.py  test_classes.py  test_reader.py
