[tool.poetry]
name = "testassigment"
version = "0.1.0"
description = ""
authors = ["Mixnosha <xmixho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
matplotlib = "^3.7.2"
mplfinance = "^0.12.10b0"
pytest = "^7.4.2"

[tool.poetry.scripts]
start="testassigment.main:run"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.287"


[tool.ruff]
line-length=79
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


[tool.ruff.isort]
known-third-party = ["pandas", "matplotlib", "mplfinance"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
